@@ -14,7 +14,7 @@ public interface IForwardAction extends IAction {
 	/**
 	 * The URI to go. <p>
 	 * 
-	 * If it starts with "http://" or "http://" the action will forward to the
+	 * If it starts with "http://" or "https://" the action will forward to the
 	 * absolute URL in internet (since v4m1), if it starts with "javascript:" the
 	 * corresponding code will executed by the browser (since 4.0.1), 
 	 * otherwise it will forward to a resource inside this application. 
