@@ -66,7 +66,7 @@ public class Module extends DWRBase {
 			Map changedParts = new HashMap();
 			result.setChangedParts(changedParts);
 			String forwardURI = (String) request.getSession().getAttribute("xava_forward");
-			String[] forwardURIs = (String[]) request.getSession().getAttribute("xava_forwards"); 
+			String[] forwardURIs = (String[]) request.getSession().getAttribute("xava_forwards");
 			if (!Is.emptyString(forwardURI)) {
 				memorizeLastMessages();
 				if (forwardURI.startsWith("http://") || forwardURI.startsWith("https://") || forwardURI.startsWith("javascript:")) {
