@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Fix: An IForwardAction from an IChainAction with on-init=true does not do the forward. 
 - Fix: Collection customization is not stored permanently if @ListProperties is used. 
 - Fix: DWR signature warning in log.
 - Fix: View.getEntity() when creating does not load the references so combo descriptions are not available.
